# codecpod

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  THIRD-PARTY-NOTICES.md  build.rs  cliff.toml  codecpod.pyi  pyproject.toml  wrapper.h
.github/workflows/: crates.yml  release.yml  wheels.yml
benches/: codec.rs
benchmarks/: test_codec.py
python/: Cargo.toml
python/src/: lib.rs
src/: avio.rs  encoder.rs  encoder_stub.rs  error.rs  lib.rs  loader.rs  loader_stub.rs  log.rs  log_shim.c  log_stub.rs  sys.rs  util.rs
tests/: conftest.py  test_bytes.py  test_errors.py  test_load_options.py  test_logging.py  test_metadata.py  test_roundtrip.py  test_save_options.py
